@@ -9,6 +9,7 @@
 * Dev - Enabled the sorting of Gallery images
 * Dev - Added in a sticky order field to destinations to allow  sticky posts functionality
 * Fix - Added in a function to clear the term cache when ordering, so the order reflects immediately.
+* Fix - Fixing the returning variables of the destinations template tags.
 
 ### 1.3.0 - 2 October 2019
 * Fix - Fixed the Post Type enquiry dropdown.
